get task logs on failure too

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -153,6 +153,7 @@ commands:
       - run:
           when: on_fail
           name: "Ensure necessary Python packages are available."
+          when: always
           command: |
             pkg_names="fire determined"
             for pkg_name in $pkg_names; do
@@ -163,6 +164,7 @@ commands:
       - run:
           when: on_fail
           name: "Collect logs and calculate statistics"
+          when: always
           command: |
             target_dir="<< parameters.store_path >>"
             mkdir -p $target_dir
