--- a/.circleci/datadog/ci-local-config.yaml
+++ b/.circleci/datadog/ci-local-config.yaml
@@ -1339,14 +1339,14 @@ process_config:
   process_collection:
     # @param enabled - boolean - optional - default: false
     # Enables collection of information about running processes.
-    enabled: false
+    enabled: true
 
   # @param container_collection - custom object - optional
   # Specifies settings for collecting containers.
   container_collection:
     # @param enabled - boolean - optional - default: true
     # Enables collection of information about running containers.
-    enabled: false
+    enabled: true
 
   # Deprecated - use `process_collection.enabled` and `container_collection.enabled` instead
   # @param enabled - string - optional - default: "false"
@@ -1356,7 +1356,7 @@ process_config:
   #    * "true"     : The Agent collects containers and processes information.
   #    * "disabled" : The Agent process collection is disabled.
   
-  enabled: "false"
+  enabled: "true"
 
   # @param expvar_port - string - optional - default: 6062
   # @env DD_PROCESS_CONFIG_EXPVAR_PORT - string - optional - default: 6062
