add additional logs

--- a/.circleci/datadog/e2e-log-settings.yaml
+++ b/.circleci/datadog/e2e-log-settings.yaml
@@ -3,3 +3,11 @@ logs:
     path: "/tmp/artifacts/logs/*.log"
     service: "<SERVICE_NAME>"
     source: "determined-task-logs"
+  - type: file
+    path: "/tmp/devcluster/*.log"
+    service: "<SERVICE_NAME>"
+    source: "devcluster-logs"
+  - type: file
+    path: "/tmp/priority_scheduler/*.log"
+    service: "<SERVICE_NAME>"
+    source: "devcluster-priority-scheduler-logs"
