--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -63,9 +63,6 @@ parameters:
   e2e-react:
     type: string
     default: ""
-  enable-dd-monitoring:
-    type: boolean
-    default: false
 
 release-and-rc-filters: &release-and-rc-filters
   branches:
@@ -635,7 +632,7 @@ commands:
           condition: 
             and:
               - <<parameters.wait-for-master>>
-              - <<pipeline.parameters.enable-dd-monitoring>>
+              - $AIS_DD_ENABLE_MONITORING
           steps:
             - run:
                 name: Install DataDog agent
@@ -756,7 +753,7 @@ commands:
           condition:
             and:
               - <<parameters.wait-for-master>>
-              - <<pipeline.parameters.enable-dd-monitoring>>
+              - $AIS_DD_ENABLE_MONITORING
           steps:
             - run: # We don't know how long Circle leaves these machines running in the background. Take down the agent for safety.
                 name: Stop DataDog agent
