--- a/helm/charts/determined/templates/master-config.yaml
+++ b/helm/charts/determined/templates/master-config.yaml
@@ -119,6 +119,9 @@ stringData:
       {{- if .Values.oidc.displayNameAttributeName }}
       display_name_attribute_name: {{ .Values.oidc.displayNameAttributeName }}
       {{- end }}
+      {{- if .Values.oidc.alwaysRedirect }}
+      always_redirect: {{ .Values.oidc.alwaysRedirect }}
+      {{- end }}
     {{- end }}
 
     {{- if .Values.scim }}
@@ -148,6 +151,9 @@ stringData:
       {{- end }}
       {{- if .Values.saml.displayNameAttributeName }}
       display_name_attribute_name: {{ .Values.saml.displayNameAttributeName }}
+      {{- end }}
+      {{- if .Values.saml.alwaysRedirect }}
+      always_redirect: {{ .Values.saml.alwaysRedirect }}
       {{- end }}
     {{- end }}
     {{- end }}
