--- a/harness/determined/deploy/aws/templates/secure.yaml
+++ b/harness/determined/deploy/aws/templates/secure.yaml
@@ -72,7 +72,7 @@ Parameters:
   MasterInstanceType:
     Type: String
     Description: Instance Type of Master
-    Default: m5.large
+    Default: m6i.large
 
   AuxAgentInstanceType:
     Type: String
@@ -87,7 +87,7 @@ Parameters:
   BastionInstanceType:
     Type: String
     Description: Instance Type of Bastion
-    Default: m5.large
+    Default: m6i.large
 
   InboundCIDRRange:
     Type: String
