Revert "lower the timeout to test. run on all branches"
This reverts commit ff129d7029dbbef6b22821dfb35abc7023a5dcf8.

--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -4144,7 +4144,11 @@ workflows:
   send-alerts:
     <<: *do-not-run-on-manual-trigger
     jobs:
-      - send-job-level-alerts
+      - send-job-level-alerts:
+          filters:
+            branches:
+              only:
+                - main
 
   test-go:
     <<: *do-not-run-on-manual-trigger
