--- a/harness/determined/deploy/aws/templates/simple-rds.yaml
+++ b/harness/determined/deploy/aws/templates/simple-rds.yaml
@@ -89,6 +89,7 @@ Parameters:
     Type: String
     Description: Docker password to pull images that need authentication
     Default: ""
+    NoEcho: true
 
   Version:
     Type: String
