--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -5325,8 +5325,8 @@ workflows:
               # enroot create /lustre/ssd/foundation_engineering/determinedai+environments+cuda-11.3-pytorch-1.10-tf-2.8-gpu-24586f0.sqsh
               # image: determinedai+environments+cuda-11.3-pytorch-1.10-tf-2.8-gpu-24586f0
               image:
-                cpu: determinedai/pytorch-tensorflow-cpu-dev:e960eae
-                cuda: determinedai/pytorch-ngc-dev:e960eae
+                cpu: <<pipeline.parameters.default-pt-tf-cpu-hpc-image>>
+                cuda: <<pipeline.parameters.default-pt-gpu-hpc-image>>
               environment_variables:
                   # Some ports are not working, disable them so distributed jobs work.
                   - NCCL_IB_HCA=mlx6_0:0
@@ -5642,8 +5642,8 @@ workflows:
               # enroot create /lustre/ssd/foundation_engineering/determinedai+environments+cuda-11.3-pytorch-1.10-tf-2.8-gpu-24586f0.sqsh
               # image: determinedai+environments+cuda-11.3-pytorch-1.10-tf-2.8-gpu-24586f0
               image:
-                cpu: determinedai/pytorch-tensorflow-cpu-dev:e960eae
-                cuda: determinedai/pytorch-ngc-dev:e960eae
+                cpu: <<pipeline.parameters.default-pt-tf-cpu-hpc-image>>
+                cuda: <<pipeline.parameters.default-pt-gpu-hpc-image>>
               environment_variables:
                   # Some ports are not working, disable them so distributed jobs work.
                   - NCCL_IB_HCA=mlx6_0:0
