INFENG-744: Remove VERSION file
* Remove dependency on static VERSION file and replace it with a bash
  script, version.sh, that either fetches the version from git tags,
  usually used for local builds, or returns an existing environment
  variable, mainly used in CI.

* The script uses a few different git tools to find the most recent
  previous tag for a given commit, a combination of git-describe,
  git-tag, and git-merge-base. Additional implementation details are
  available in the comments in that file. The resulting version, though,
  is <prev-tag>+<HEAD-short-SHA>. This ensures that certain Python
  dependency constraints are able to be satisfied when building
  Determined locally. Otherwise, if VERSION is already set, as will be
  the case in CI, the script simply returns that instead.

* Replace existing `cat`s of the VERSION file with invocations of this
  shell script; specifically, in the following files:

- .devcontainer/server.sh
- .github/workflows/lint-python.yml
- agent/Makefile
- docs/Makefile
- docs/deploy/Makefile
- helm/Makefile
- master/Makefile
- model_hub/Makefile

* Invoke version.sh in the Python Determined module Makefile:
  harness/Makefile. This was necessary to replace my previous attempt at
  fetching version string information from git using a Pythom setuptools
  plugin called setuptools_scm. Although that library works and is quite
  handy, and I sincerely thank Ronny Pfannschmidt and all other
  contributors for their work, configuring it was non-trivial, at times,
  and it was becoming difficult to cleanly get it to do what I wanted. I
  also decided that it makes more sense to have a single, canonical
  version string (not unlike the VERSION file itself) that we use for as
  many things as possible, notwithstanding certain potential
  incongruences between how different systems parse version strings.

  Now, instead of using setuptools_scm, we read the environment variable
  in harness/setup.py, and pass that to setuptools as a 

--- a/agent/Makefile
+++ b/agent/Makefile
@@ -1,7 +1,7 @@
 .DEFAULT_GOAL := build
 SHELL := bash
 
-export VERSION:=$(shell cat ../VERSION)
+export VERSION:=$(shell ../version.sh)
 export GO111MODULE := on
 export DOCKER_REPO ?= determinedai
 
