--- a/.github/workflows/lint-python.yml
+++ b/.github/workflows/lint-python.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: set VERSION env var
         shell: bash
-        run: echo "VERSION=$(< ./VERSION )" >> $GITHUB_ENV
+        run: echo "VERSION=$(./version.sh)" >> $GITHUB_ENV
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
