Remove setuptools-scm functionality from model_hub Python package.
* Update Makefile to export VERSION environment variable.

* Update pyproject.toml to remove setuptools-scm dependency.

* Add setup.py script to fetch the version dynamically from the VERSION
  environment variable.

--- a/model_hub/Makefile
+++ b/model_hub/Makefile
@@ -1,5 +1,5 @@
 SHELL := /bin/bash
-VERSION := $(shell ../version.sh)
+export VERSION := $(shell ../version.sh)
 SHORT_GIT_HASH := $(shell git rev-parse --short HEAD)
 
 ARTIFACTS_DIR := /tmp/artifacts
