--- a/model_hub/pyproject.toml
+++ b/model_hub/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 # Minimum requirements for the build system to execute.
-requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
+requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -28,13 +28,6 @@ Documentation = "https://docs.determined.ai/"
 
 [tool.black]
 line-length = 100
-
-[tool.setuptools_scm]
-# Path relative_to pyproject.toml. Necessary for correct git metadata parsing.
-root = "../"
-
-# Don't add the extra commit hash. PyPI complains, and it's also just noisy.
-local_scheme = "no-local-version"
 
 [tool.setuptools]
 include-package-data = true
